--- a/css/index.css
+++ b/css/index.css
@@ -71,16 +71,27 @@ h1, h2, h3, h4, h5 {
 	margin: auto;
 }
 
-.block {
-	width: 100%;
+header {
+    display: flex;
+    flex-wrap: wrap-reverse;
+    justify-content: center;
+    align-items: center;
 }
+
+header .logo {
+    display: flex;
+    justify-content: flex-end;
+    margin: 0px 0px 0px 80px;
+}
+
+
 
 /* navigator */
 nav {
 	display: flex;
 	justify-content: space-between;
 	margin: 20px 0px;
-	align-items: center;
+    width: 70%;
 }
 
 .link_nav {
@@ -88,7 +99,7 @@ nav {
 	font-weight: 300;
 	color: grey;
 	text-decoration: none;
-	margin: 15px;
+	margin: 15px 15px 15px 0px;
 }
 
 .link_nav:hover {
@@ -99,14 +110,19 @@ nav {
 
 .splash {
 	display: flex;
-	align-items: center;
+    align-items: center;
+    border-bottom: solid black 2px;
+}
+
+.splash .ball_img {
+    margin: 50px 0px;
 }
 
 .splash .left_text {
 	display: flex;
 	flex-direction: column;
 	font-size: 80px;
-	margin: 100px 0px;
+	margin: 50px 0px;
 	text-align: center;
 	align-items: center;
 }
@@ -132,16 +148,22 @@ nav {
 	justify-content: space-between;	
 }
 
+.content2 .block {
+	display: flex;
+    justify-content: space-between;
+    border-bottom: solid black 2px;
+}
+
 .content .content_top {
 	width: 420px;
-	margin: 1% 8px 2% 8px;
+	margin: 1% 8px 2% 0px;
 	padding: 25px 0px;
 	line-height: 20px;
 }
 
-.content .content_bottom {
+.content2 .content_bottom {
 	width: 270px;
-	margin: 1% 8px 2% 8px;
+	margin: 1% 8px 0px 0px;
 	padding: 25px 0px;
 	line-height: 20px;
 }
@@ -213,6 +235,11 @@ li {
 /* At 800 px and below do the following */
 
 @media (max-width: 800px) {
+    nav {
+        justify-content: space-around;
+        width: 97%;
+    }
+    
     .splash {
         justify-content: center;
     }
@@ -227,16 +254,24 @@ li {
         justify-content: center;
     }
 
-    .content_top {
-        margin-right: 3%;
+    .content .content_top {
+        margin-right: 1%;
+        margin-left: 1%;
     }
 
-    .content_bottom {
-        margin-right: 3%;
+    .content2 .content_bottom {
+        margin-right: 1%;
+        margin-left: 1%;
     }
 
     .middle-img {
-        width: 98%
+        width: 100%
+
+    }
+
+    footer {
+        padding: 25px 0px 0px 0px;
+        margin-left: 1%;
     }
 }
 
@@ -265,4 +300,11 @@ li {
         justify-content: center;
     }
 
+    .content_top {
+        margin-right: 3%;
+    }
+
+    .content_bottom {
+        margin-right: 3%;
+    }
 }
