Finished Mobile version, Updated readme.md with tick boxes. MET MVP git status

--- a/css/index.css
+++ b/css/index.css
@@ -111,11 +111,12 @@ nav {
 .splash {
 	display: flex;
     align-items: center;
+    justify-content: flex-end;
     border-bottom: solid black 2px;
 }
 
 .splash .ball_img {
-    margin: 50px 0px;
+    margin: 50px 0px 50px 50px;
 }
 
 .splash .left_text {
@@ -145,7 +146,7 @@ nav {
 /* content */
 .content .block {
 	display: flex;
-	justify-content: space-between;	
+	justify-content: space-between;
 }
 
 .content2 .block {
@@ -235,6 +236,12 @@ li {
 /* At 800 px and below do the following */
 
 @media (max-width: 800px) {
+    header .logo {
+        display: flex;
+        justify-content: center;
+        margin: auto;
+    }
+    
     nav {
         justify-content: space-around;
         width: 97%;
@@ -282,6 +289,10 @@ li {
         justify-content: center;
     }
 
+    header .logo {
+        margin: 15px 0px;
+    }
+
     .splash img {
         display: none;
     }
@@ -289,22 +300,42 @@ li {
     header nav {
         display: flex;
         flex-direction: column;
+        justify-content: flex-start;
+        margin: 0px;
     }
 
     header nav a {
         display: flex;
-        margin-right: 0;
         padding: 14px;
         border-top: 1px solid gray;
+        border-bottom: 1px solid gray;
         width: 100%;
         justify-content: center;
     }
 
-    .content_top {
-        margin-right: 3%;
+    .link_nav {
+        margin: 0px;
     }
 
-    .content_bottom {
-        margin-right: 3%;
+    .content .block {
+        display: flex;
+        justify-content: space-between;
+        flex-direction: column;
     }
+    
+    .content2 .block {
+        display: flex;
+        justify-content: space-between;
+        flex-direction: column;
+        border-bottom: solid black 2px;
+    }
+
+    .content .content_top {
+        width: 95%;
+    }
+
+    .content2 .content_bottom {
+        width: 95%;
+    }
+
 }
